Moved __version__ to utils (faster app loading)

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -4,7 +4,7 @@
 #: import FontelloButton uix.widgets
 #: import ScrollEffect kivy.effects.scroll.ScrollEffect
 
-#: import __version__ bot.core.__version__
+#: import __version__ bot.utils.__version__
 
 
 <AuthPopup>:
