--- a/uix/kv/loadingpopup.kv
+++ b/uix/kv/loadingpopup.kv
@@ -1,21 +1,28 @@
+#: import Widgwt uix.widgets
+
 <LoadingPopup>:
-    auto_dismiss: False
-    size_hint: None, None
+    size_hint: 0, 0
     size: 0, 0
-    pos_hint: {'center_x': 0.5, 'center_y': 0.5}
 
-    canvas.before:
-        PushMatrix
-        Rotate:
-            angle: root.angle
-            axis: 0, 0, 1
-            origin: root.center
+    GridLayout:
+        canvas.before:
+            Color:
+                rgba: .1, .1, .1, .5
+            Rectangle:
+                pos: 0, 0
+                size: 10000, 10000
 
-    canvas.after:
-        PopMatrix
-
-
-    Image:
         size_hint: None, None
-        size: self.texture_size
-        source: 'data/images/icon.png'
+        size: self.minimum_size
+        rows: 2
+
+        Image:
+            size_hint: None, None
+            size: self.texture_size
+            allow_stretch: True
+            source: 'data/images/icon.png'
+        Label:
+            text: 'Загрузка...'
+            font_size: sp(20)
+            size_hint: None, None
+            size: self.texture_size
