Removed position 1 of "unmark message" option

--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -62,7 +62,7 @@
                 Widget
 
                 OptionButton:
-                    states: (0, 1, 2)
+                    states: (0, 2)
                     id: force_unmark_btn
                     text: 'F'
                     on_release: root.switch_option_state(self, self.states)
