Removed unused imports

--- a/uix/kv/mainscreen.kv
+++ b/uix/kv/mainscreen.kv
@@ -34,7 +34,7 @@
                     ActionButton:
                         text: 'Информация'
 
-                        on_release: root.show_info()
+                        on_release: app.open_info_popup()
 
                     ActionButton:
                         text: 'Выйти'
