--- a/uix/kv/customcommandsscreen.kv
+++ b/uix/kv/customcommandsscreen.kv
@@ -43,32 +43,53 @@
                     height: self.minimum_size[1]
 
         GridLayout:
-            cols: 5
+            cols: 9
+            spacing: dp(7)
             size_hint_y: None
             height: self.minimum_height
 
             FontelloButton:
                 text: 'P'
-                size_hint_x: 1.5
+                size_hint: 1.5, None
                 background_color: 0, 0, 0, 0
 
                 on_release: root.open_new_command_popup()
 
             Widget
 
-            BlueButton:
-                text: 'Вернуться'
-                padding: dp(5), dp(10)
-                size_hint: None, None
-                size: self.texture_size
+            FontelloButton:
+                id: button_left
+                text: 'L'
+                size_hint_x: None
+                width: self.texture_size[0] * 2
+                on_release: root.prev_page()
 
-                on_release: root.leave()
+            Label:
+                id: page_label
+                font_size: sp(15)
+                size_hint_x: None
+                width: self.texture_size[0]
+
+            #BlueButton:
+            #    text: 'Вернуться'
+            #    padding: dp(5), dp(10)
+            #    size_hint: None, None
+            #    size: self.texture_size
+
+            #    on_release: root.leave()
+
+            FontelloButton:
+                id: button_right
+                text: 'R'
+                size_hint_x: None
+                width: self.texture_size[0] * 2
+                on_release: root.next_page()
 
             Widget
 
             FontelloButton:
                 text: 'U'
-                size_hint_x: 1.5
+                size_hint: 1.5, None
                 background_color: 0, 0, 0, 0
 
                 on_release: root.on_enter()
