Removed ".decode" from labels

--- a/uix/kv/authpopup.kv
+++ b/uix/kv/authpopup.kv
@@ -24,7 +24,7 @@
 
         TextInput:
             text: app._cached_login if app._cached_login is not None else ''
-            hint_text: 'Логин'.decode('utf8')
+            hint_text: 'Логин'
             id: login_textinput
             size_hint: None, None
             font_size: '18sp'
@@ -35,7 +35,7 @@
 
         TextInput:
             text: app._cached_password if app._cached_password is not None else ''
-            hint_text: 'Пароль'.decode('utf8')
+            hint_text: 'Пароль'
             id: pass_textinput
             size_hint: None, None
             font_size: '18sp'
