--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -37,7 +37,7 @@
                 size_hint_y: None
                 height:
                     min((self.line_height+dp(1))*6, max((self.line_height+dp(1))*3, self.minimum_height))
-                hint_text: 'Команда'.decode('utf8')
+                hint_text: 'Команда'
 
             TextInput:
                 id: response_textinput
@@ -45,7 +45,7 @@
                 size_hint_y: None
                 height:
                     min((self.line_height+dp(1))*6, max((self.line_height+dp(1))*3, self.minimum_height))
-                hint_text: 'Ответ'.decode('utf8')
+                hint_text: 'Ответ'
 
             BoxLayout:
                 size_hint_y: None
