--- a/uix/kv/mainscreen.kv
+++ b/uix/kv/mainscreen.kv
@@ -92,7 +92,7 @@
                             self.size[0] - self.padding[0], self.size[1] - self.padding[1]
 
                 ScrollView:
-                    effect_cls: ScrollEffect
+                    #effect_cls: ScrollEffect
 
                     Label:
                         id: logging_panel
